# nft-marketplace

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  canister_ids.json  config.sh  cover.json  current_branch_cmds.sh  deploy.sh  dfx.json  healthcheck.sh  marketplace.sh  package.json
.github/workflows/: pr-healthcheck-runner.yml
.scripts/: add-collection.sh  deploy-all-services.sh  dev.sh  devcheck.sh  dfx-identity.sh  healthcheck.sh
.scripts/crowns/: deploy-crowns.sh
.scripts/dip20/: start-service.sh
.scripts/dip721/: deploy-nft.sh  set-controllers.sh  start-service.sh
.scripts/marketplace/: deploy-marketplace.sh  start-service.sh
.scripts/mocks/: generate-mocks-staging.sh  generate-mocks.sh  identity-mocks.sh
.scripts/required/: cap.sh  default-identity.sh  icx.sh
.scripts/wicp/: balance-of.sh  deploy-wicp.sh
deploy/: capmp.wasm  dabnftmp.wasm  dip20mp.wasm  dip721mp.did  dip721mp.wasm  ext721mp.did  ext721mp.wasm
docs/: dfx.md  integrations.md  service-dependencies.md  service.md
marketplace/: Cargo.toml  marketplace.did
marketplace/src/: fungible_proxy.rs  main.rs  non_fungible_proxy.rs  types.rs  upgrade.rs  utils.rs  vendor_types.rs
