[package]
name = "marketplace"
version = "0.1.0"
authors = ["Daniel Graczer <daniel@fleek.co>"]
edition = "2018"

[dependencies]
ic-cdk-macros = "0.3"
candid = "0.7.4"
serde = "1.0"
serde_cbor = "0.11.2"
serde_bytes = "0.11.5"
ic-kit = "0.4.3"
ic-cdk = "0.3.1"
assert-panic = "1.0.1"
derive_builder = "0.10.2"
derive-new = "0.5"
num-bigint = "0.4.3"
cap-std = { git = "https://github.com/Psychedelic/cap", branch = "main", package="cap-standards", features = ["alpha-dip20", "cap-sdk", "sdk-impls"] }
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
